--- a/ScienceFestival.REST.Gateway/appsettings.json
+++ b/ScienceFestival.REST.Gateway/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Urls": {
+    "Users": "https://localhost:7124"
+  }
 }
