async microservice and messageBroker

--- a/ScienceFestival.REST.Gateway/appsettings.json
+++ b/ScienceFestival.REST.Gateway/appsettings.json
@@ -7,6 +7,8 @@
   },
   "AllowedHosts": "*",
   "Urls": {
-    "Users": "https://localhost:7124"
+    "Users": "https://localhost:7124",
+    "Shows": "http://localhost:8000",
+    "Reviews": "https://localhost:7151"
   }
 }
