--- a/ScienceFestival.Async/appsettings.json
+++ b/ScienceFestival.Async/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-JEFCR47;Initial Catalog=sfAsync;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
