docker file for ScienceFestival.REST

--- a/ScienceFestival.REST/appsettings.json
+++ b/ScienceFestival.REST/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-JEFCR47;Initial Catalog=sfUsers;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=localhost,1433;Initial Catalog=Users;User ID=sa;Password=Admin123!;Trust Server Certificate=True"
   },
   "Logging": {
     "LogLevel": {
