dockerfile for async

--- a/ScienceFestival.Async/appsettings.json
+++ b/ScienceFestival.Async/appsettings.json
@@ -1,12 +1,18 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-JEFCR47;Initial Catalog=sfAsync;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=localhost,1433;Initial Catalog=Reviews;User ID=sa;Password=Admin123!;Trust Server Certificate=True"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "MessageBroker": {
+    "HostName": "localhost",
+    "Port": 5672,
+    "UserName": "guest",
+    "Password": "guest"
   },
   "AllowedHosts": "*"
 }
